--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>The New York Times - Breaking News, US News, World News, and Videos</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/static/styles.css">
     </head>
     <body>
         <header>
