--- a/templates/index.html
+++ b/templates/index.html
@@ -14,50 +14,17 @@
         <main>
             <hr>
             <hr>
-
             <div id="articles">
-                <!--Article 1-->
-                <section id="article1">
-                    <h2>Check Out This Insane Propane Tank</h2>
-                    <p> Dude check out this propane tank. It can carry propane and is known to be the sole
-                        fuel at barbaques. You can refill them and buy them at the gas station. I dunno about you
-                        but this is absolutely bananas. Think of all the things you can fuel. Cars, stoves, basically anything
-                        you can think of. If we didn't have these we would be doomed as a species.
-                    <img src="images/propane.jfif" alt="A Propane Tank">
+                {% for story in stories %}
+                <section class="article">
+                    <h2><a href="{{ story.url }}" target="_blank">{{ story.title }}</a></h2>
+                    <p><strong>Published:</strong> {{ story.pub_date }}</p>
+                    <p>{{ story.summary }}</p>
+                    <hr>
                 </section>
-
-                <!--Article 2-->
-                <section id="article2">
-                    <h2>Local Man Keeps Losing at Poker</h2>
-                    <img src="images/cards.jfif" alt="Poker Cards">
-                    <p>Can you believe this guy? He just keeps losing at poker. Even with a winning hand he folds. I cannot
-                        believe it and neither should you. This guy should just quit while he can. I heard he took out his house's
-                        mortgage to pay off his debt. If you were related to him, would you allow yourself to be subjected
-                        to his insanity? This guy just keeps losing it all.
-                    </p>
-                </section>
-                
-                <!--Article 3-->
-                <section id="article3">
-                    <h2>Illegal Onion Farm Busted</h2>
-                    <p> Insane weekend for the police. In a sting operation, an onion farm was shut down today. A local SWAT team
-                        was given a tip and enacted justice swiftly. The farmer said silly things like "I didn't do anything wrong"
-                        and "this is just fresh produce". He was read his rights and was proceeded to be tackled and cuffed. A fantastic
-                        day in the city of New York, where the streets are slightly more safe.
-                    </p>
-                    <img src="images/onions.jfif" alt="A Couple of Onions">
-                </section>
+                {% endfor %}
             </div>
-
-            <!--Testing Here-->
-            <!--We get the headline, date, and city-->>
-            <div>
-                {%for story in stories%}
-                <h2>{{ story.headline.main }}</h2>
-                <p><strong>Published:</strong> {{ story.pub_date }}</p>
-                <p><strong>Location:</strong> {{ story.city }}</p>
-                {%endfor%}
-            </div>
+            
         </main>
 
 
