started working on testing backend

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,6 +71,6 @@
             <hr>
             <hr>
         </footer>
-        <script src="functions.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>  
