--- a/Frontend/templates/login.html
+++ b/Frontend/templates/login.html
@@ -8,7 +8,16 @@
             <h1 id="Header">Login</h1>
         </header>
         <main>
-            
+        <form action="{{ url_for('login') }}" method="POST">
+            <label for="username">Username:</label><br>
+            <input type="text" id="username" name="username" required><br><br>
+
+            <label for="password">Password:</label><br>
+            <input type="password" id="password" name="password" required><br><br>
+
+            <button type="submit">Login</button>
+        </form>
+            <p>Need an account? <a href="login.html">Sign up here</a>.</p>
         </main>
     </body>
 </html>  
