--- a/Frontend/templates/signup.html
+++ b/Frontend/templates/signup.html
@@ -8,7 +8,16 @@
             <h1 id="Header">Signup</h1>
         </header>
         <main>
-            
+            <form action="{{ url_for('login') }}" method="POST">
+                <label for="username">Username:</label><br>
+                <input type="text" id="username" name="username" required><br><br>
+
+                <label for="password">Password:</label><br>
+                <input type="password" id="password" name="password" required><br><br>
+
+                <button type="submit">Login</button>
+            </form>
+            <p>Already have an account? <a href="login.html">Log in here</a>.</p>
         </main>
     </body>
 </html>  
