--- a/Frontend/templates/index.html
+++ b/Frontend/templates/index.html
@@ -10,6 +10,8 @@
         <header>
             {%if current_user.is_authenticated%}
                 <h2>Hi {{ current_user.username }}</h2>
+                <a href="{{ url_for('logout') }}">Logout</a>
+
             {%endif%}
             <h1 id="title_logo">The New York Times</h1>
             <div id="date_section">
