--- a/Frontend/templates/login.html
+++ b/Frontend/templates/login.html
@@ -17,7 +17,7 @@
 
             <button type="submit">Login</button>
         </form>
-            <p>Need an account? <a href="login.html">Sign up here</a>.</p>
+            <p>Need an account? <a href="{{ url_for('signup') }}">Sign up here</a>.</p>
         </main>
     </body>
 </html>  
