--- a/Frontend/templates/signup.html
+++ b/Frontend/templates/signup.html
@@ -8,7 +8,7 @@
             <h1 id="Header">Signup</h1>
         </header>
         <main>
-            <form action="{{ url_for('login') }}" method="POST">
+            <form action="{{ url_for('signup') }}" method="POST">
                 <label for="username">Username:</label><br>
                 <input type="text" id="username" name="username" required><br><br>
 
@@ -17,7 +17,7 @@
 
                 <button type="submit">Login</button>
             </form>
-            <p>Already have an account? <a href="login.html">Log in here</a>.</p>
+            <p>Already have an account? <a href="{{ url_for('login') }}">Log in here</a>.</p>
         </main>
     </body>
 </html>  
